--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.2",
     "lodash": "^4.17.21",
     "pinia": "^2.0.30",
+    "router": "^1.3.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
