--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "@types/lodash": "^4.14.191",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "bootstrap": "^5.2.3",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
