--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "prettier": "2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
